2015-07-23  Ilya Enkovich  <enkovich.gnu@gmail.com>

	Backport from mainline r224601.
	2015-06-18  Ilya Enkovich  <enkovich.gnu@gmail.com>

	PR middle-end/66568
	* cfgexpand.c (expand_return): Handle missing bounds.
	(expand_gimple_stmt_1): Likewise.
	* tree-chkp.c (chkp_expand_zero_bounds): New.
	* tree-chkp.h (chkp_expand_zero_bounds): New.

2015-07-23  Ilya Enkovich  <enkovich.gnu@gmail.com>

	Backport from mainline r224600.
	2015-06-18  Ilya Enkovich  <enkovich.gnu@gmail.com>

	PR middle-end/66567
	* ipa-chkp.c (chkp_maybe_create_clone): Require
	functions to be instrumentable.
	* tree-chkp.c (chkp_replace_function_pointer): Use
	chkp_instrumentable_p instead of attribute check.

2015-07-23  Ilya Enkovich  <enkovich.gnu@gmail.com>

	Backport from mainline r223215.
	2015-05-15  Ilya Enkovich  <enkovich.gnu@gmail.com>

	PR middle-end/66134
	* tree-chkp.c (chkp_get_orginal_bounds_for_abnormal_copy): New.
	(chkp_maybe_copy_and_register_bounds): Don't copy abnormal copy.

2015-07-23  Ilya Enkovich  <ilya.enkovich@intel.com>

	Backport from mainline r223114.
	2015-05-13  Ilya Enkovich  <ilya.enkovich@intel.com>

	PR target/66048
	* function.c (diddle_return_value_1): Process bounds first.
	* config/i38/i386.c (ix86_function_value_regno_p): Add bnd1
	register.

2015-07-23  Ilya Enkovich  <ilya.enkovich@intel.com>

	Backport from mainline r223216.
	2015-05-15  Ilya Enkovich  <ilya.enkovich@intel.com>

	* ipa-chkp.h (chkp_wrap_function): New.
	* ipa-chkp.c (chkp_wrap_function): Remove 'static'.
	(chkp_wrap_function_name): New.
	(chkp_build_instrumented_fndecl): Use chkp_wrap_function_name
	to get wrapper name.
	* lto-cgraph.c: Include ipa-chkp.h.
	(input_cgraph_1): Avoid alias chain for wrappers.

2015-07-23  Ilya Enkovich  <ilya.enkovich@intel.com>

	Backport from mainline r224074.
	2015-06-03  Ilya Enkovich  <ilya.enkovich@intel.com>

	* ipa-chkp.c (chkp_maybe_create_clone): Create alias
	reference when cloning alias node.

2015-07-21  Georg-Johann Lay  <avr@gjlay.de>